Fix wrapping

--- a/src/assets/sass/_cards.scss
+++ b/src/assets/sass/_cards.scss
@@ -10,7 +10,7 @@
     margin-right: auto;
 
     .card {
-        width: 320px;
+        width: 325px;
         text-decoration: none;
         cursor: pointer;
 
